Fix up CI github Action for Required Check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,19 @@ jobs:
           flags: unittests
           fail_ci_if_error: false
 
+  # Summary job for matrix test runs. GitHub requires a single check for branch protection,
+  # but matrix jobs create multiple checks. This job provides a single "Check Tests Passed"
+  # status that succeeds only if all matrix test jobs succeed.
+  validate-tests-passed:
+    name: Check Tests Passed
+    runs-on: ubuntu-latest
+    needs: test
+    if: always()
+    steps:
+      - name: Check test matrix status
+        if: needs.test.result != 'success'
+        run: exit 1
+
   build:
     name: Build
     runs-on: ubuntu-latest
